Fix Controller, Fix Repo Query, Refactor ViewTopo